# e5

./: .emacs  .gitattributes  README  README.org  api.key  early-init.el  eminit.sh  ewdk.txt  get-cl.sh  getemacs.sh  init.el  jeez.el  jolyon-theme.el  jw-bind.el  jw-defaults.el  jw-fctn.el  jw-google-c-style.el  jw-vdiff.el  jwm-adm.el  jwm-ans.el  jwm-auto.el  jwm-chi.el  jwm-clj.el  jwm-cmn.el  jwm-col.el  jwm-company.el  jwm-dev.el  jwm-dsk.el  jwm-fluff.el  jwm-jen.el  jwm-jnl.el  jwm-lil.el  jwm-lsp-cpp.el  jwm-mov.el  jwm-org.el  jwm-py.el  jwm-roam.el  jwm-rtg.el  jwm-scl.el  jwm-signal.el  (+12 more)
cu/: hello.cu
eg/: CMakeLists.txt  main.c
file-finder/: CMakeLists.txt  README.org  cheat.txt  file-finder.cpp  jolyon-file-finder.zip.md5sum  notes.org
josh/: cangjie5.elc  josh-chinese.el  josh-chinese.elc
rtm/CMakeProject1/: CMakeLists.txt  CMakePresets.json  vcpkg.json
rtm/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
sbcl/: hello.lisp  omg.txt
sbcl/cuild/: README.markdown  README.org  cuild.asd
sbcl/cuild/src/: main.lisp
sbcl/cuild/tests/: main.lisp
simple_asm/: hello.asm
simple_boost/: CMakeLists.txt  README.org  get_boost.sh  hello.cpp
simple_boost/src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp  methods.cpp  methods.h  process.cpp  stuff.h
simple_boost/test/: CMakeLists.txt  test.cpp
simple_boost/win/: CMakeLists.txt  win.cpp
simple_filter/: Device.c  Device.h  Driver.c  Driver.h  Public.h  Queue.c  Queue.h  Trace.h  makefile.inc  simple_filter.vcxproj  sources
simple_gtest/src/: CMakeLists.txt  main.cpp  manual_test_fixture.cpp  manual_test_fixture.h
snippets/: blog
snippets/c++-mode/: bf  bt  bw
snippets/org-mode/: sbr  ser
sq/: CMakeLists.txt  upload-candidate.sh
sq/src/: CMakeLists.txt  bld.sh  example_ouput.txt  hm.cfg  pipeline.cpp  pipeline.h  sq-0.1.1-Linux.deb  sq-2.3.4-Linux.deb  sq.cpp  sq.h  stage.cpp  stage.h  ucm.cmake
sq/test/: CMakeLists.txt  hello_test.cpp  test.cpp
templates/: default-cpp  default-el  default-h  default-inv  default-lisp  default-org  default-py  default-rkt  default-sh
